--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "puppeteer": "^14.0.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-hook-form": "^7.31.1",
     "write-json-file": "^5.0.0"
   },
   "devDependencies": {
