Add token to user session; Finish register & login, course rating APIs
- Use a token is to validate saved user session
- Finish registration and login system
- Add API for adding classes to a user

--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.7.0",
+    "bcrypt": "^5.0.1",
+    "jsonwebtoken-esm": "^1.0.3",
     "lodash": "^4.17.21",
+    "mongodb": "^4.6.0",
     "next": "12.1.6",
     "prettier": "^2.6.2",
     "puppeteer": "^14.0.0",
